clipper2c/include/types.h

  typedef struct ClipperClipper64 ClipperClipper64;
  typedef struct ClipperClipperD ClipperClipperD;
  typedef struct ClipperClipperOffset ClipperClipperOffset;
  typedef struct ClipperPath64 ClipperPath64;
  typedef struct ClipperPathD ClipperPathD;
  typedef struct ClipperPaths64 ClipperPaths64;
  typedef struct ClipperPathsD ClipperPathsD;
  typedef struct ClipperPolyTree64 ClipperPolyTree64;
  typedef struct ClipperPolyTreeD ClipperPolyTreeD;
  /** Determines which subregions are 'inside' when paths self-intersect
   *  or overlap. EVEN_ODD toggles inside/outside on every edge crossing.
   *  NON_ZERO uses the winding-number sign — the conventional rule for
   *  polygons-with-holes data where holes wind opposite to their outer
   *  contour. POSITIVE and NEGATIVE only count windings of the matching
   *  sign, useful when direction has been baked into the input. */
  typedef enum ClipperFillRule
  {
    EVEN_ODD,
    NON_ZERO,
    POSITIVE,
    NEGATIVE
  } ClipperFillRule;
  typedef enum ClipperClipType
  {
    NONE,
    INTERSECTION,
    UNION,
    DIFFERENCE,
    XOR
  } ClipperClipType;
  typedef enum ClipperJoinType
  {
    SQUARE_JOIN,
    BEVEL_JOIN,
    ROUND_JOIN,
    MITER_JOIN
  } ClipperJoinType;
  /** Open-path endpoint handling for ClipperOffset. POLYGON_END is the
   *  closed-polygon case — no endpoints to inflate. The other variants
   *  decide how the start and end of a polyline are extended: BUTT keeps
   *  the line flat at the original endpoint, SQUARE extends one delta
   *  past it, ROUND adds a half-circle cap, JOINED keeps polylines
   *  connected to neighbouring segments. */
  typedef enum ClipperEndType
  {
    POLYGON_END,
    JOINED_END,
    BUTT_END,
    SQUARE_END,
    ROUND_END
  } ClipperEndType;