generated/bindings.rs

unsafe extern "C" {
    pub fn clipper_polytreed_set_inv_scale(pt: *mut ClipperPolyTreeD, value: f64);
}
unsafe extern "C" {
    pub fn clipper_polytreed_inv_scale(pt: *mut ClipperPolyTreeD) -> f64;
}
unsafe extern "C" {
    pub fn clipper_polytreed_add_child(
        pt: *mut ClipperPolyTreeD,
        path: *mut ClipperPath64,
    ) -> *mut ClipperPolyTreeD;
}
unsafe extern "C" {
    pub fn clipper_polytreed_count(pt: *mut ClipperPolyTreeD) -> usize;
}
unsafe extern "C" {
    pub fn clipper_polytreed_is_hole(pt: *mut ClipperPolyTreeD) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn clipper_polytreed_polygon(
        mem: *mut ::std::os::raw::c_void,
        pt: *mut ClipperPolyTreeD,
    ) -> *mut ClipperPathD;
}
unsafe extern "C" {
    pub fn clipper_polytreed_area(pt: *mut ClipperPolyTreeD) -> f64;
}
unsafe extern "C" {
    pub fn clipper_polytreed_to_paths(
        mem: *mut ::std::os::raw::c_void,
        pt: *mut ClipperPolyTreeD,
    ) -> *mut ClipperPathsD;
}
unsafe extern "C" {
    pub fn clipper_clipper64(mem: *mut ::std::os::raw::c_void) -> *mut ClipperClipper64;
}
unsafe extern "C" {
    pub fn clipper_clipperd(
        mem: *mut ::std::os::raw::c_void,
        precision: ::std::os::raw::c_int,
    ) -> *mut ClipperClipperD;
}
unsafe extern "C" {
    pub fn clipper_clipper64_set_preserve_collinear(
        c: *mut ClipperClipper64,
        t: ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn clipper_clipper64_set_reverse_solution(
        c: *mut ClipperClipper64,
        t: ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn clipper_clipper64_get_preserve_collinear(
        c: *mut ClipperClipper64,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn clipper_clipper64_get_reverse_solution(
        c: *mut ClipperClipper64,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn clipper_clipper64_clear(c: *mut ClipperClipper64);
}
unsafe extern "C" {
    pub fn clipper_clipperd_set_preserve_collinear(
        c: *mut ClipperClipperD,
        t: ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn clipper_clipperd_set_reverse_solution(c: *mut ClipperClipperD, t: ::std::os::raw::c_int);
}
unsafe extern "C" {
    pub fn clipper_clipperd_get_preserve_collinear(
        c: *mut ClipperClipperD,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn clipper_clipperd_get_reverse_solution(c: *mut ClipperClipperD) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn clipper_clipperd_clear(c: *mut ClipperClipperD);
}
unsafe extern "C" {
    pub fn clipper_clipper64_add_subject(c: *mut ClipperClipper64, subjects: *mut ClipperPaths64);
}
unsafe extern "C" {
    pub fn clipper_clipper64_add_open_subject(
        c: *mut ClipperClipper64,
        open_subjects: *mut ClipperPaths64,
    );
}
unsafe extern "C" {
    pub fn clipper_clipper64_add_clip(c: *mut ClipperClipper64, clips: *mut ClipperPaths64);
}
unsafe extern "C" {
    pub fn clipper_clipper64_execute(
        c64: *mut ClipperClipper64,
        ct: ClipperClipType,
        fr: ClipperFillRule,
        closed: *mut ClipperPaths64,
        open: *mut ClipperPaths64,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn clipper_clipper64_execute_tree_with_open(
        c64: *mut ClipperClipper64,
        ct: ClipperClipType,
        fr: ClipperFillRule,
        tree: *mut ClipperPolyTree64,
        open: *mut ClipperPaths64,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn clipper_clipperd_add_subject(c: *mut ClipperClipperD, subjects: *mut ClipperPathsD);
}
unsafe extern "C" {
    pub fn clipper_clipperd_add_open_subject(
        c: *mut ClipperClipperD,
        open_subjects: *mut ClipperPathsD,
    );
}
unsafe extern "C" {
    pub fn clipper_clipperd_add_clip(c: *mut ClipperClipperD, clips: *mut ClipperPathsD);
}
unsafe extern "C" {
    pub fn clipper_clipperd_execute(
        cD: *mut ClipperClipperD,
        ct: ClipperClipType,
        fr: ClipperFillRule,
        closed: *mut ClipperPathsD,
        open: *mut ClipperPathsD,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn clipper_clipperd_execute_tree_with_open(
        cD: *mut ClipperClipperD,
        ct: ClipperClipType,
        fr: ClipperFillRule,
        tree: *mut ClipperPolyTreeD,
        open: *mut ClipperPathsD,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn clipper_clipperoffset(
        mem: *mut ::std::os::raw::c_void,
        miter_limit: f64,
        arc_tolerance: f64,
        preserve_collinear: ::std::os::raw::c_int,
        reverse_solution: ::std::os::raw::c_int,
    ) -> *mut ClipperClipperOffset;
}
unsafe extern "C" {
    pub fn clipper_clipperoffset_set_miter_limit(c: *mut ClipperClipperOffset, l: f64);
}
unsafe extern "C" {
    pub fn clipper_clipperoffset_set_arc_tolerance(c: *mut ClipperClipperOffset, t: f64);
}
unsafe extern "C" {
    pub fn clipper_clipperoffset_set_preserve_collinear(
        c: *mut ClipperClipperOffset,
        t: ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn clipper_clipperoffset_set_reverse_solution(
        c: *mut ClipperClipperOffset,
        t: ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn clipper_clipperoffset_get_miter_limit(c: *mut ClipperClipperOffset) -> f64;
}
unsafe extern "C" {
    pub fn clipper_clipperoffset_get_arc_tolerance(c: *mut ClipperClipperOffset) -> f64;
}
unsafe extern "C" {
    pub fn clipper_clipperoffset_get_preserve_collinear(
        c: *mut ClipperClipperOffset,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn clipper_clipperoffset_get_reverse_solution(
        c: *mut ClipperClipperOffset,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn clipper_clipperoffset_error_code(c: *mut ClipperClipperOffset) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn clipper_clipperoffset_clear(c: *mut ClipperClipperOffset);
}
unsafe extern "C" {
    pub fn clipper_clipperoffset_add_path64(
        c: *mut ClipperClipperOffset,
        p: *mut ClipperPath64,
        jt: ClipperJoinType,
        et: ClipperEndType,
    );
}
unsafe extern "C" {
    pub fn clipper_clipperoffset_add_paths64(
        c: *mut ClipperClipperOffset,
        p: *mut ClipperPaths64,
        jt: ClipperJoinType,
        et: ClipperEndType,
    );
}
unsafe extern "C" {
    pub fn clipper_clipperoffset_execute(
        mem: *mut ::std::os::raw::c_void,
        c: *mut ClipperClipperOffset,
        delta: f64,
    ) -> *mut ClipperPaths64;
}
unsafe extern "C" {
    pub fn clipper_path64_size() -> usize;
}
unsafe extern "C" {
    pub fn clipper_pathd_size() -> usize;
}
unsafe extern "C" {
    pub fn clipper_paths64_size() -> usize;
}
unsafe extern "C" {
    pub fn clipper_pathsd_size() -> usize;
}
unsafe extern "C" {
    pub fn clipper_polytree64_size() -> usize;
}
unsafe extern "C" {
    pub fn clipper_polytreed_size() -> usize;
}
unsafe extern "C" {
    pub fn clipper_clipper64_size() -> usize;
}
unsafe extern "C" {
    pub fn clipper_clipperd_size() -> usize;
}
unsafe extern "C" {
    pub fn clipper_clipperoffset_size() -> usize;
}
unsafe extern "C" {
    pub fn clipper_allocate(size: usize) -> *mut ::std::os::raw::c_void;
}
unsafe extern "C" {
    pub fn clipper_delete_path64(p: *mut ClipperPath64);
}
unsafe extern "C" {
    pub fn clipper_delete_pathd(p: *mut ClipperPathD);
}
unsafe extern "C" {
    pub fn clipper_delete_paths64(p: *mut ClipperPaths64);
}
unsafe extern "C" {
    pub fn clipper_delete_pathsd(p: *mut ClipperPathsD);
}
unsafe extern "C" {
    pub fn clipper_delete_polytree64(p: *mut ClipperPolyTree64);
}
unsafe extern "C" {
    pub fn clipper_delete_polytreed(p: *mut ClipperPolyTreeD);
}
unsafe extern "C" {
    pub fn clipper_delete_clipper64(p: *mut ClipperClipper64);
}
unsafe extern "C" {
    pub fn clipper_delete_clipperd(p: *mut ClipperClipperD);
}
unsafe extern "C" {
    pub fn clipper_delete_clipperoffset(p: *mut ClipperClipperOffset);
}
